--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 ### Mixpost ############################
 MIXPOST_RELEASE_NAME=inovector/mixpost
 MIXPOST_RELEASE_VERSION=v1.1.1
-MIXPOST_APP_NAME='Mixpost Lite'
+MIXPOST_APP_NAME='Mixpost'
 MIXPOST_APP_URL=http://127.0.0.1:80
 MIXPOST_APP_PORT=CHANGE_ME_HERE
 MIXPOST_DB_DATABASE='CHANGE_ME_HERE'
